k8s/nde-termennetwerk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nde-termennetwerk-deployment
  namespace: default
  labels:
    app: nde-termennetwerk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nde-termennetwerk
  template:
    metadata:
      labels:
        app: nde-termennetwerk
    spec:
      containers:
        - name: nde-termennetwerk
          image: clariahacr.azurecr.io/nde-termennetwerk:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 500Mi
            requests:
              cpu: 10m
              memory: 300Mi
      imagePullSecrets:
        - name: dockercreds

---
apiVersion: v1
kind: Service
metadata:
  name: nde-termennetwerk-service
  namespace: default
spec:
  selector:
    app: nde-termennetwerk
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
