k8s/nde-termennetwerk-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nde-termennetwerk-service
  namespace: default
spec:
  selector:
    app: nde-termennetwerk
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
